--- a/Views/POS/Index.cshtml
+++ b/Views/POS/Index.cshtml
@@ -243,7 +243,7 @@
                         dataType: 'JSON',
                         contentType: 'application/json; charset=utf-8',
                         data: JSON.stringify(objSalesTransaction),
-                        url: '/POS/Index',
+                        url: '/POS/Recordtransact',
                         success: function (data) {
                             alert("Transaction Saved! Thank you for shopping with us!");
                             PrintReceipt(data)
