--- a/Views/Shared/_InventoryLayout.cshtml
+++ b/Views/Shared/_InventoryLayout.cshtml
@@ -28,7 +28,7 @@
                     <span id="date">@DateTime.Now.ToString("MMMM, dd yyyy")</span>
                     <span id="time" style="margin-left: 20px;">@DateTime.Now.ToString("HH:mm:ss tt")</span>
                 </h3>
-                <h3 class="col text-end m-0">  Paul Tan <i class="bi bi-person-circle" style="color:white;"></i></h3>
+                <h3 class="col text-end m-0">   @User.Identity.Name <i class="bi bi-person-circle" style="color:white;"></i></h3>
             </div>
         </div>
 
