--- a/Views/Accounts/Login.cshtml
+++ b/Views/Accounts/Login.cshtml
@@ -7,19 +7,32 @@
 
 @model SBIT3J_SuperSystem_Final.Models.EmployeeAccount
 
+<style>
+    .img-container {
+        max-width: 100%;
+        max-height: 100%;
+        text-align: center; /* Optional: Center the image horizontally */
+    }
 
+        .img-container img {
+            max-width: 100%;
+            max-height: 100%;
+            height: auto; /* This ensures the aspect ratio is maintained */
+            display: inline-block; /* Remove any extra space below the image */
+        }
+</style>
 <div class="overall-page-container">
     <div class="overlay">
 
         <div class="loginpage-container">
 
             <div class="left-panel">
-
                 <div class="header-logo">
                     <div class="img-container">
-
+                        <img src="~/Image/Group1-Assets/received_594167488046920.png" class="img-fluid" alt="Responsive Image">
                     </div>
                 </div>
+
                 <div class="company-name">
                     <h1>Down Town Alley</h1>
                     <p>"Elevate Your Style, Embrace Your Identity."</p>
