--- a/Views/Inventory/Index.cshtml
+++ b/Views/Inventory/Index.cshtml
@@ -22,7 +22,7 @@
                         @Html.DisplayNameFor(model => model.Date)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.EmployeeAccount.Username)
+                        Cashier
                     </th>
                     <th>
 
