--- a/Views/Inventory/ProductsDelete.cshtml
+++ b/Views/Inventory/ProductsDelete.cshtml
@@ -5,12 +5,16 @@
     Layout = "~/Views/Shared/_InventoryLayout.cshtml";
 }
 
-<h2>Delete</h2>
 <div class="container-fluid rounded-1 p-4 h-100">
-
-    <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>Product_Info</h4>
+        <div class="d-flex justify-content-between pe-4">
+            <h3 class="m-0">Are you sure you want to delete this?</h3>
+
+            <div>
+                @Html.ActionLink("Back to List", "Products", null, new { @class = "btn btn-info mt-2" })
+            </div>
+        </div>
+
         <hr />
         <dl class="dl-horizontal">
             <dt>
@@ -92,8 +96,7 @@
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Products")
+                <input type="submit" value="Delete" class="btn btn-danger" />
             </div>
         }
     </div>
