--- a/Views/Inventory/ManageDiscount.cshtml
+++ b/Views/Inventory/ManageDiscount.cshtml
@@ -29,7 +29,7 @@
                         @Html.DisplayNameFor(model => model.Description)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Discount_Amount)
+                        Discount %
                     </th>
                     <th></th>
                 </tr>
